# firefresh

./: .gitignore  CHANGELOG.md  CODEOWNERS  INSTALL.md  LICENSE  Makefile  PROJECT.md  QUICKSTART.md  README.md  SECURITY.md  check_readiness.py  config.template  install.sh  install_firefox.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  packaging-ci.yml  pr-quality-checks.yml  release-packages.yml  workflow-lint.yml
automation/: package_aur.sh  package_deb.sh  package_rpm.sh  set_branch_protection.sh  sign_packages.sh  test_packages.sh  validate_rpm_local.sh
packaging/aur/: PKGBUILD.in
packaging/common/: firefox-installer-launcher
packaging/rpm/: firefox-installer.spec.in
src/firefox_installer_app/: __init__.py  cli.py  core.py
